--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="nav__container">
           <img class="logo" src="./assets/Library.svg" alt="" />
           <ul class="nav__links">
-            <li><a class="nav__link" href="#">Home</a></li>
-            <li><a class="nav__link" href="#">Contact</a></li>
+            <li><a class="nav__link" href="index.html">Home</a></li>
+            <li><a class="nav__link" href="contact.html">Contact</a></li>
             <li><a class="nav__link nav__link--primary" href="books.html">Books</a></li>
           </ul>
         <button class="btn__menu" onclick="openMenu()"> 
@@ -29,7 +29,7 @@
             <button class="btn__menu btn__menu--close" onclick="closeMenu()">
                 <i class="fas fa-times"></i>
             </button>
-          <nav>
+          <!-- <nav>
       <div class="nav__container">
         <img class="logo" src="./assets/Library.svg" alt="Library Logo" />
         <ul class="nav__links">
@@ -37,7 +37,7 @@
           <li><a class="nav__link" href="contact.html">Contact</a></li>
           <li><a class="nav__link nav__link--primary" href="books.html">Books</a></li>
         </ul>
-      </div>
+      </div> -->
     </nav>
             
         </div>
