--- a/contact.html
+++ b/contact.html
@@ -17,14 +17,24 @@
 <body>
     <nav>
         <div class="nav__container">
-            <img class="logo" src="./assets/Library.svg" alt="Library Logo" />
-            <ul class="nav__links">
-                <li><a class="nav__link" href="index.html">Home</a></li>
-                <li><a class="nav__link" href="contact.html">Contact</a></li>
-                <li><a class="nav__link nav__link--primary" href="books.html" target="_blank">Books</a></li>
-            </ul>
+          <img class="logo" src="./assets/Library.svg" alt="" />
+          <ul class="nav__links">
+            <li><a class="nav__link" href="index.html">Home</a></li>
+            <li><a class="nav__link" href="contact.html">Contact</a></li>
+            <li><a class="nav__link nav__link--primary" href="books.html">Books</a></li>
+          </ul>
+        <button class="btn__menu" onclick="openMenu()"> 
+            <i class="fas fa-bars"></i>
+        </button>
+        <div class="menu__backdrop">
+            <button class="btn__menu btn__menu--close" onclick="closeMenu()">
+                <i class="fas fa-times"></i>
+            </button>
+            </div>
         </div>
-    </nav>
+      </nav>
+
+
     <div class="header__container">
       <div class="header__description">
         <h1>
@@ -101,9 +111,9 @@
                 </a>
                 <div class="footer__list">
                     <a href="#" class="footer__link">Home</a>
-                    <a href="#highlights" class="footer__link no-cursor">About</a>
-                    <a href="#features" class="footer__link">Books</a>
-                    <a href="" class="footer__link no-cursor">Contact</a>
+                    <a href="index.html#highlights" class="footer__link no-cursor">About</a>
+                    <a href="books.html" class="footer__link">Books</a>
+                    <a href="contact.html" class="footer__link no-cursor">Contact</a>
                 </div>
                 <div class="footer__copyright">Copyright &copy; 2024 Library ni Mae </div>
             </div>
